# starsweeper

./: .gitignore  README.md  explore.ipynb  explore_fft_redundant.ipynb  search.cu  sedna_ephemeris.py  tess.py  wavelet.ipynb
kernels/: fits_reader.cuh  shiftstack.cu
pipeline/: Cargo.toml
pipeline/src/: main.rs  query.rs  tap.rs
