[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
bytes = "1.8.0"
dirs = "5.0.1"
futures-util = "0.3.31"
indicatif = "0.17.8"
reqwest = { version = "0.11.18", features = ["stream"] }
roxmltree = "0.20.0"
scraper = "0.20.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.5.2"
